[gd_scene load_steps=3 format=3 uid="uid://c8g0ixi6liln8"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_7iyd7"]
[ext_resource type="PackedScene" uid="uid://buf6665a3djac" path="res://scenes/volume_slider.tscn" id="2_hqttu"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7iyd7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pause screen
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Save"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer/SettingsButton"]
layout_mode = 0
offset_left = 220.5
offset_top = -50.5
offset_right = 456.5
offset_bottom = 209.5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/SettingsButton/PanelContainer"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="Panel/VBoxContainer/SettingsButton/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Master Volume"

[node name="MasterVolume" parent="Panel/VBoxContainer/SettingsButton/PanelContainer/VBoxContainer" instance=ExtResource("2_hqttu")]
texture_filter = 1
layout_mode = 2
bus_name = "Master"

[node name="MusicLabel" type="Label" parent="Panel/VBoxContainer/SettingsButton/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Music volume"

[node name="MusicVolume" parent="Panel/VBoxContainer/SettingsButton/PanelContainer/VBoxContainer" instance=ExtResource("2_hqttu")]
texture_filter = 1
layout_mode = 2
bus_name = "Background"

[node name="SFXLabel" type="Label" parent="Panel/VBoxContainer/SettingsButton/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SFX volume "

[node name="SFXVolume" parent="Panel/VBoxContainer/SettingsButton/PanelContainer/VBoxContainer" instance=ExtResource("2_hqttu")]
texture_filter = 1
layout_mode = 2
bus_name = "SFX"

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/SettingsButton/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Resume"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton/PanelContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
